chore: job request user provided id
